@@ -335,7 +335,6 @@ dnl Links
 #AC_CONFIG_LINKS([src/dwarf-hpux.c:src/dwarf.c])
 
 dnl Configuration files
-AC_CONFIG_FILES([ski-config], [chmod +x ski-config])
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([macros/Makefile])
 AC_CONFIG_FILES([src/Makefile src/decoder/Makefile src/encoder/Makefile])
