@@ -1,84 +1,0 @@
-#!/bin/sh
-
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-exec_prefix_set=no
-
-usage()
-{
-    cat <<EOF
-Usage: ski-config [OPTIONS]
-Options:
-    [--prefix[=DIR]]
-    [--exec-prefix[=DIR]]
-    [--version]
-    [--libs]
-    [--cflags]
-    [--ldflags]
-EOF
-    exit $1
-}
-
-if test $# -eq 0; then
-    usage 1 1>&2
-fi
-
-while test $# -gt 0; do
-  case "$1" in
-  -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
-  *) optarg= ;;
-  esac
-
-  case $1 in
-    --prefix=*)
-      prefix=$optarg
-      if test $exec_prefix_set = no ; then
-        exec_prefix=$optarg
-      fi
-      ;;
-    --prefix)
-      echo_prefix=yes
-      ;;
-    --exec-prefix=*)
-      exec_prefix=$optarg
-      exec_prefix_set=yes
-      ;;
-    --exec-prefix)
-      echo_exec_prefix=yes
-      ;;
-    --version)
-      echo @SKI_VERSION@-@SKI_RELEASE@
-      exit 0
-      ;;
-    --cflags)
-      echo_cflags=yes
-      ;;
-    --ldflags)
-      echo_ldflags=yes
-      ;;
-    --libs)
-      echo_libs=yes
-      ;;
-    *)
-      usage 1 1>&2
-      ;;
-  esac
-  shift
-done
-
-if test "$echo_prefix" = "yes"; then
-    echo $prefix
-fi
-if test "$echo_exec_prefix" = "yes"; then
-    echo $exec_prefix
-fi
-if test "$echo_cflags" = "yes"; then
-    skiversion=@SKI_MAJOR_VERSION@.@SKI_MINOR_VERSION@
-    echo -I@includedir@/ski-$skiversion
-fi
-if test "$echo_ldflags" = "yes"; then
-    echo -L@libdir@
-fi
-if test "$echo_libs" = "yes"; then
-    echo -lski
-fi
